@@ -1,6 +1,10 @@
 
 * Release history
 
+** Main branch change
+
+- Add aider-add-module function, it will add files with suffix in the module directory to aider session. It will be useful for the whole module level analysis and code change.
+
 ** v0.8.4
 
 - Improve prompts for 
@@ -11,8 +15,7 @@
 ** v0.8.3
 
 - fix: aider--process-message-if-multi-line: it will not add {aider..aider} block, when the str already contains {aider string. It cause /ask made change for multi-line prompt. (I thought it is an aider bug but it isn't: Aider-AI/aider#3893). The bug is not very obvious because aider-input-sender function didn't print the modification on the aider session.
-- f[[file:~/Dropbox/org/diary.org::*ERRORs][ERRORs]]
-ix: aider--send-command trim both leading and triming \n before sending. so it won't unnecessarily wrap prompt with {aider..aider} block
+- fix: aider--send-command trim both leading and triming \n before sending. so it won't unnecessarily wrap prompt with {aider..aider} block
 - aider--analyze-module and aider--plot-module-architecture do not ask user to provide module directory (it might add non-relevant files and adding cost). Now add related files for the module is user's responsibility before using this two functions.
 - aider--batch-add-dired-marked-files-with-command will use git root relative path for /add command. Since in --subtree-only session the full path add doesn't work.
 
